--- a/src/main/resources/ru/nucodelabs/gem/view/tables/ModelTable.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/tables/ModelTable.fxml
@@ -27,7 +27,7 @@
                 <HBox alignment="BASELINE_CENTER" style="-fx-padding: 20;" VBox.vgrow="NEVER">
                     <VBox alignment="BASELINE_CENTER">
                         <Button text="%import" onAction="#importModel"/>
-                        <Label text="(*.MOD)"  style="-fx-font-size: 12; -fx-text-fill: Gray; -fx-padding: 5;"/>
+                        <Label text="(*.MOD)" style="-fx-font-size: 12; -fx-text-fill: Gray; -fx-padding: 5;"/>
                     </VBox>
                 </HBox>
                 <HBox alignment="BASELINE_CENTER" style="-fx-padding: 20;" VBox.vgrow="NEVER">
@@ -43,6 +43,8 @@
                          text="%modelPower" sortable="false" onEditCommit="#onEditCommit"/>
             <TableColumn fx:id="resistanceCol" maxWidth="Infinity" minWidth="20.0" prefWidth="100.0"
                          text="%modelResistanceApparent" sortable="false" onEditCommit="#onEditCommit"/>
+            <TableColumn fx:id="zCol" text="Глубина (m)" maxWidth="Infinity" minWidth="20.0"
+                         sortable="false" editable="false" prefWidth="100"/>
         </columns>
     </TableView>
     <HBox spacing="5" style="-fx-padding: 5">
@@ -54,10 +56,10 @@
                    maxWidth="Infinity"/>
         <Button fx:id="addBtn" text="Добавить слой" onAction="#addLayer" minWidth="150" disable="true">
             <graphic>
-                    <ImageView fitWidth="15" fitHeight="15">
-                        <Image url="@../../../../../img/ui_icons/add/2x/round_add_black_24dp.png"/>
-                    </ImageView>
-                </graphic>
-            </Button>
+                <ImageView fitWidth="15" fitHeight="15">
+                    <Image url="@../../../../../img/ui_icons/add/2x/round_add_black_24dp.png"/>
+                </ImageView>
+            </graphic>
+        </Button>
     </HBox>
 </VBox>
