--- a/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
@@ -94,11 +94,22 @@
                                     </Button>
                                     <Label style="-fx-text-fill: Gray" text="${controller.vesNumber}"/>
                                     <Label text="${controller.vesTitle}"/>
-                                    <HBox HBox.hgrow="ALWAYS"/>
+                                    <HBox HBox.hgrow="NEVER" prefWidth="2"
+                                          style="-fx-background-color: rgba(0, 0, 0, 0.05);">
+                                        <HBox.margin>
+                                            <Insets left="5" right="5"/>
+                                        </HBox.margin>
+                                    </HBox>
                                     <Label text="X"/>
-                                    <TextField promptText="X" fx:id="picketX" prefWidth="50"/>
+                                    <Label text="="/>
+                                    <Label fx:id="xCoordLbl" text="-"/>
+                                    <HBox HBox.hgrow="ALWAYS"/>
                                     <Label text="Z"/>
+                                    <Label text="="/>
                                     <TextField promptText="Z" fx:id="picketZ" prefWidth="50"/>
+                                    <Label text="%offset"/>
+                                    <Label text="="/>
+                                    <TextField promptText="%offset" fx:id="picketX" prefWidth="50"/>
                                     <Button contentDisplay="GRAPHIC_ONLY" styleClass="small-btns" fx:id="submitCoodsBtn"
                                             onAction="#submitCoords">
                                         <graphic>
