Changeable name + some updates

--- a/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
@@ -93,13 +92,17 @@
                                         </graphic>
                                     </Button>
                                     <Label style="-fx-text-fill: Gray" text="${controller.vesNumber}"/>
-                                    <Label text="${controller.vesTitle}"/>
-                                    <HBox HBox.hgrow="NEVER" prefWidth="2"
-                                          style="-fx-background-color: rgba(0, 0, 0, 0.05);">
-                                        <HBox.margin>
-                                            <Insets left="5" right="5"/>
-                                        </HBox.margin>
-                                    </HBox>
+                                    <TextField fx:id="picketName" text="-"/>
+                                    <Button contentDisplay="GRAPHIC_ONLY" styleClass="small-btns"
+                                            fx:id="submitPicketName"
+                                            onAction="#submitPicketName">
+                                        <graphic>
+                                            <ImageView fitHeight="15" fitWidth="15" preserveRatio="true">
+                                                <Image url="@../../../../../img/ui_icons/done/2x/round_done_black_24dp.png"/>
+                                            </ImageView>
+                                        </graphic>
+                                    </Button>
+                                    <fx:include source="SmallDivider.fxml"/>
                                     <Label text="X"/>
                                     <Label text="="/>
                                     <Label fx:id="xCoordLbl" text="-"/>
@@ -107,23 +110,28 @@
                                     <Label text="Z"/>
                                     <Label text="="/>
                                     <TextField promptText="Z" fx:id="picketZ" prefWidth="50"/>
-                                    <Label text="%offset"/>
-                                    <Label text="="/>
-                                    <TextField promptText="%offset" fx:id="picketX" prefWidth="50"/>
-                                    <Button contentDisplay="GRAPHIC_ONLY" styleClass="small-btns" fx:id="submitCoodsBtn"
-                                            onAction="#submitCoords">
+                                    <Button contentDisplay="GRAPHIC_ONLY" styleClass="small-btns" fx:id="submitZButton"
+                                            onAction="#submitZ">
                                         <graphic>
                                             <ImageView fitHeight="15" fitWidth="15" preserveRatio="true">
                                                 <Image url="@../../../../../img/ui_icons/done/2x/round_done_black_24dp.png"/>
                                             </ImageView>
                                         </graphic>
                                     </Button>
-                                    <HBox HBox.hgrow="NEVER" prefWidth="2"
-                                          style="-fx-background-color: rgba(0, 0, 0, 0.05);">
-                                        <HBox.margin>
-                                            <Insets left="5" right="5"/>
-                                        </HBox.margin>
-                                    </HBox>
+                                    <fx:include source="SmallDivider.fxml"/>
+                                    <Label text="%offset"/>
+                                    <Label text="="/>
+                                    <TextField promptText="%offset" fx:id="picketX" prefWidth="50"/>
+                                    <Button contentDisplay="GRAPHIC_ONLY" styleClass="small-btns"
+                                            fx:id="submitOffsetXButton"
+                                            onAction="#submitOffsetX">
+                                        <graphic>
+                                            <ImageView fitHeight="15" fitWidth="15" preserveRatio="true">
+                                                <Image url="@../../../../../img/ui_icons/done/2x/round_done_black_24dp.png"/>
+                                            </ImageView>
+                                        </graphic>
+                                    </Button>
+                                    <fx:include source="SmallDivider.fxml"/>
                                     <Button text="%inverse" onAction="#inverseSolve">
                                         <graphic>
                                             <ImageView fitWidth="15" fitHeight="15">
