--- a/src/main/resources/ru/nucodelabs/gem/view/tables/ModelTable.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/tables/ModelTable.fxml
@@ -49,11 +49,11 @@
     </TableView>
     <HBox spacing="5" style="-fx-padding: 5">
         <TextField fx:id="indexTextField" promptText="N"
-                   prefWidth="45" minWidth="45"/>
+                   prefWidth="45" minWidth="45" onAction="#addLayer"/>
         <TextField fx:id="powerTextField" promptText="%modelPower"
-                   maxWidth="Infinity"/>
+                   maxWidth="Infinity" onAction="#addLayer"/>
         <TextField fx:id="resistanceTextField" promptText="%modelResistanceApparent"
-                   maxWidth="Infinity"/>
+                   maxWidth="Infinity" onAction="#addLayer"/>
         <Button fx:id="addBtn" text="Добавить слой" onAction="#addLayer" minWidth="150" disable="true">
             <graphic>
                 <ImageView fitWidth="15" fitHeight="15">
