--- a/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
@@ -56,7 +56,20 @@
                 </MenuBar>
                 <StackPane maxWidth="Infinity" maxHeight="Infinity">
                     <VBox maxWidth="Infinity" maxHeight="Infinity">
-                        <fx:include fx:id="picketsBar" source="PicketsBar.fxml"/>
+                        <HBox>
+                            <fx:include fx:id="picketsBar" source="PicketsBar.fxml" HBox.hgrow="ALWAYS"/>
+                            <HBox>
+                                <Button fx:id="addPicketBtn" prefWidth="50" minWidth="50" maxWidth="50"
+                                        onAction="#addPicket" stylesheets="@PicketsBar.css"
+                                        HBox.hgrow="NEVER" contentDisplay="GRAPHIC_ONLY">
+                                    <graphic>
+                                        <ImageView fitWidth="15" fitHeight="15" preserveRatio="true">
+                                            <Image url="@../../../../../img/ui_icons/add/2x/round_add_black_24dp.png"/>
+                                        </ImageView>
+                                    </graphic>
+                                </Button>
+                            </HBox>
+                        </HBox>
                         <SplitPane orientation="VERTICAL" maxWidth="Infinity" maxHeight="Infinity">
                             <HBox maxWidth="Infinity" maxHeight="Infinity">
                                 <Placeholder prefWidth="150" maxWidth="150" text="Палитра"/>
