--- a/src/main/resources/ru/nucodelabs/gem/view/main/PicketsBar.css
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/PicketsBar.css
@@ -5,7 +5,7 @@
 }
 
 .button {
-    -fx-pref-height: 25;
+    -fx-max-height: infinity;
     -fx-border-radius: 0;
     -fx-pref-width: 20000;
     -fx-background-radius: 0;
