Первичная 3-х слойная модель

--- a/src/main/resources/ru/nucodelabs/gem/view/tables/ModelTable.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/tables/ModelTable.fxml
@@ -33,6 +33,7 @@
                 <HBox alignment="BASELINE_CENTER" style="-fx-padding: 20;" VBox.vgrow="NEVER">
                     <Label text="%drag"/>
                 </HBox>
+                <Button text="Первичная модель" onAction="#makePrimaryModel"/>
             </VBox>
         </placeholder>
         <columns>
