--- a/src/main/resources/ru/nucodelabs/gem/view/color_palette/ColorPalette.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/color_palette/ColorPalette.fxml
@@ -1,30 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.canvas.Canvas?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.canvas.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<HBox xmlns="http://javafx.com/javafx"
-      xmlns:fx="http://javafx.com/fxml"
-      fx:controller="ru.nucodelabs.gem.view.color_palette.ColorPaletteController"
-      prefHeight="-Infinity"
-      prefWidth="-Infinity">
+
+<HBox prefHeight="-Infinity" prefWidth="-Infinity" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.nucodelabs.gem.view.color_palette.ColorPaletteController">
     <VBox alignment="CENTER">
         <padding>
-            <Insets left="10" right="10" top="10" bottom="10"/>
+            <Insets bottom="10" left="10" right="10" top="10" />
         </padding>
         <HBox VBox.vgrow="ALWAYS">
-            <Canvas fx:id="palette" height="-Infinity" width="-Infinity"/>
-            <Label text="placeholder_text"/>
+            <Canvas fx:id="palette" height="-Infinity" width="-Infinity" />
+            <Label text="placeholder_text" />
         </HBox>
         <VBox VBox.vgrow="NEVER">
             <VBox VBox.vgrow="ALWAYS">
-                <Label text="%paletteMinRes"/>
-                <TextField fx:id="minResistance"/>
+                <Label text="%paletteMinRes" />
+                <TextField fx:id="minResistanceTF" onKeyTyped="#onMinResistanceEdit" />
             </VBox>
             <VBox VBox.vgrow="ALWAYS">
-                <Label text="%paletteMaxRes"/>
-                <TextField fx:id="maxResistance"/>
+                <Label text="%paletteMaxRes" />
+                <TextField fx:id="maxResistanceTF" onKeyTyped="#onMaxResistanceEdit" />
             </VBox>
         </VBox>
     </VBox>
