Цвета разреза теперь изменяются в зависимости от минимального и максимального сопротивления. Палитра отображается некорректно, т.к при инициализации ширина и высота palettePane равны 0. Отображение градиента пока недоделал. Нашел баг - при нажатии "обратная задача" при отсутствии загруженных экспериментальных данных программа вылетает из-за ошибки в forwardsolver.

--- a/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
@@ -72,19 +72,15 @@
                             </HBox>
                         </HBox>
                         <SplitPane orientation="VERTICAL" maxWidth="Infinity" maxHeight="Infinity">
-                            <!--<HBox maxWidth="Infinity" maxHeight="Infinity">-->
-                                <SplitPane prefWidth="-Infinity" prefHeight="-Infinity" dividerPositions="0.2">
-                                    <!--<TitledPane alignment="TOP_LEFT">-->
-                                        <fx:include source="../color_palette/ColorPalette.fxml" fx:id="colorPalette" VBox.vgrow="ALWAYS"/>
-                                    <!--</TitledPane>-->
-                                    <SplitPane orientation="VERTICAL" maxHeight="Infinity" maxWidth="Infinity">
-                                        <Placeholder text="%pseudoSection"/>
-                                        <fx:include fx:id="crossSection" source="../cross_section/CrossSection.fxml"/>
-                                    </SplitPane>
+                            <SplitPane prefWidth="-Infinity" prefHeight="-Infinity" dividerPositions="0.2"
+                                       maxHeight="Infinity" maxWidth="Infinity">
+                                <fx:include source="../color_palette/ColorPalette.fxml" fx:id="colorPalette"/>
+                                <dividers/>
+                                <SplitPane orientation="VERTICAL" maxHeight="Infinity" maxWidth="Infinity">
+                                    <Placeholder text="%pseudoSection"/>
+                                    <fx:include fx:id="crossSection" source="../cross_section/CrossSection.fxml"/>
                                 </SplitPane>
-
-                            <!--</HBox>-->
-
+                            </SplitPane>
                             <VBox maxWidth="Infinity"
                                   maxHeight="Infinity"
                                   VBox.vgrow="ALWAYS">
