--- a/src/main/resources/ru/nucodelabs/gem/view/color_palette/ColorPalette.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/color_palette/ColorPalette.fxml
@@ -1,25 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.*?>
-<?import javafx.scene.canvas.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<HBox prefHeight="-Infinity" prefWidth="-Infinity" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.nucodelabs.gem.view.color_palette.ColorPaletteController">
-    <VBox alignment="CENTER">
+<HBox fx:id="rootHBox" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.nucodelabs.gem.view.color_palette.ColorPaletteController">
+    <VBox alignment="CENTER" maxWidth="200.0" prefHeight="300.0" prefWidth="150.0" spacing="10.0">
         <padding>
             <Insets bottom="10" left="10" right="10" top="10" />
         </padding>
-        <HBox VBox.vgrow="ALWAYS">
-            <Canvas fx:id="palette" height="-Infinity" width="-Infinity" />
-            <Label text="placeholder_text" />
-        </HBox>
-        <VBox VBox.vgrow="NEVER">
-            <VBox VBox.vgrow="ALWAYS">
+        <VBox alignment="TOP_CENTER" maxHeight="450.0" maxWidth="200.0" prefHeight="400.0" VBox.vgrow="ALWAYS">
+            <Label alignment="CENTER" text="%paletteLabel" />
+            <Pane fx:id="palettePane" maxHeight="400.0" maxWidth="150.0" prefHeight="300.0" prefWidth="150.0" />
+        </VBox>
+        <VBox spacing="10.0" VBox.vgrow="NEVER">
+            <VBox spacing="5.0" VBox.vgrow="ALWAYS">
                 <Label text="%paletteMinRes" />
                 <TextField fx:id="minResistanceTF" onKeyTyped="#onMinResistanceEdit" />
             </VBox>
-            <VBox VBox.vgrow="ALWAYS">
+            <VBox spacing="5.0" VBox.vgrow="ALWAYS">
                 <Label text="%paletteMaxRes" />
                 <TextField fx:id="maxResistanceTF" onKeyTyped="#onMaxResistanceEdit" />
             </VBox>
