--- a/src/main/resources/ru/nucodelabs/gem/view/color_palette/ColorPalette.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/color_palette/ColorPalette.fxml
@@ -1,35 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<HBox fx:id="rootHBox" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="ru.nucodelabs.gem.view.color_palette.ColorPaletteController">
-    <Pane>
-        <VBox alignment="CENTER" maxWidth="200.0" prefHeight="300.0" prefWidth="150.0" spacing="0.0">
-            <Pane>
-                <VBox alignment="TOP_CENTER" maxHeight="450.0" maxWidth="200.0" prefHeight="400.0" VBox.vgrow="ALWAYS">
-                    <Label alignment="CENTER" text="%paletteLabel"/>
-                    <Pane fx:id="palettePane" maxHeight="400.0" maxWidth="150.0" prefHeight="300.0" prefWidth="150.0"/>
-                </VBox>
-            </Pane>
-            <Pane>
-                <VBox spacing="10.0" VBox.vgrow="NEVER">
-                    <Pane>
-                        <VBox spacing="5.0" VBox.vgrow="ALWAYS">
-                            <Label text="%paletteMinRes"/>
-                            <TextField fx:id="minResistanceTF" onKeyTyped="#onMinResistanceEdit"/>
-                        </VBox>
-                    </Pane>
-                    <Pane>
-                        <VBox spacing="5.0" VBox.vgrow="ALWAYS">
-                            <Label text="%paletteMaxRes"/>
-                            <TextField fx:id="maxResistanceTF" onKeyTyped="#onMaxResistanceEdit"/>
-                        </VBox>
-                    </Pane>
-                </VBox>
-            </Pane>
-        </VBox>
-    </Pane>
 
-</HBox>
+
+<Pane fx:id="rootPane" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.nucodelabs.gem.view.color_palette.ColorPaletteController">
+   <children>
+        <VBox fx:id="rootVBox" fillWidth="false" spacing="5.0">
+             <VBox fillWidth="false" spacing="5.0" VBox.vgrow="NEVER">
+                 <Label alignment="CENTER" text="%paletteLabel" />
+            <HBox spacing="10.0">
+               <children>
+                       <Pane fx:id="palettePane" />
+                  <Pane fx:id="labelsPane" />
+               </children>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+            </HBox>
+             </VBox>
+             <VBox fillWidth="false" spacing="10.0" VBox.vgrow="NEVER">
+                  <VBox fillWidth="false" spacing="5.0" VBox.vgrow="NEVER">
+                      <Label text="%paletteMinRes" />
+                      <TextField fx:id="minResistanceTF" maxWidth="100.0" onKeyTyped="#onMinResistanceEdit" />
+                  </VBox>
+                  <VBox fillWidth="false" spacing="5.0" VBox.vgrow="NEVER">
+                      <Label text="%paletteMaxRes" VBox.vgrow="NEVER" />
+                      <TextField fx:id="maxResistanceTF" maxWidth="100.0" onKeyTyped="#onMaxResistanceEdit" />
+                  </VBox>
+            <VBox fillWidth="false" layoutX="10.0" layoutY="10.0" spacing="5.0">
+               <children>
+                  <Label text="%palettePrecision" />
+                  <TextField fx:id="precisionTF" maxWidth="100.0" onKeyTyped="#onPrecisionEdit" />
+               </children>
+            </VBox>
+             </VBox>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+        </VBox>
+   </children>
+</Pane>
