--- a/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
@@ -72,10 +72,8 @@
                             </HBox>
                         </HBox>
                         <SplitPane orientation="VERTICAL" maxWidth="Infinity" maxHeight="Infinity">
-                            <SplitPane prefWidth="-Infinity" prefHeight="-Infinity" dividerPositions="0.2"
-                                       maxHeight="Infinity" maxWidth="Infinity">
+                            <SplitPane dividerPositions="0.2">
                                 <fx:include source="../color_palette/ColorPalette.fxml" fx:id="colorPalette"/>
-                                <dividers/>
                                 <SplitPane orientation="VERTICAL" maxHeight="Infinity" maxWidth="Infinity">
                                     <Placeholder text="%pseudoSection"/>
                                     <fx:include fx:id="crossSection" source="../cross_section/CrossSection.fxml"/>
