--- a/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
@@ -72,7 +72,7 @@
                             </HBox>
                         </HBox>
                         <SplitPane orientation="VERTICAL" maxWidth="Infinity" maxHeight="Infinity">
-                            <SplitPane dividerPositions="0.2">
+                            <SplitPane dividerPositions="0.2" orientation="HORIZONTAL">
                                 <fx:include source="../color_palette/ColorPalette.fxml" fx:id="colorPalette"/>
                                 <SplitPane orientation="VERTICAL" maxHeight="Infinity" maxWidth="Infinity">
                                     <Placeholder text="%pseudoSection"/>
