--- a/src/main/resources/ru/nucodelabs/gem/view/color_palette/ColorPalette.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/color_palette/ColorPalette.fxml
@@ -34,12 +34,12 @@
                       <Label text="%paletteMaxRes" VBox.vgrow="NEVER" />
                       <TextField fx:id="maxResistanceTF" maxWidth="100.0" onKeyTyped="#onMaxResistanceEdit" />
                   </VBox>
-            <VBox fillWidth="false" layoutX="10.0" layoutY="10.0" spacing="5.0">
+            <!--<VBox fillWidth="false" layoutX="10.0" layoutY="10.0" spacing="5.0">
                <children>
                   <Label text="%palettePrecision" />
                   <TextField fx:id="precisionTF" maxWidth="100.0" onKeyTyped="#onPrecisionEdit" />
                </children>
-            </VBox>
+            </VBox>-->
              </VBox>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
