--- a/src/main/resources/ru/nucodelabs/gem/view/color_palette/ColorPalette.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/color_palette/ColorPalette.fxml
@@ -1,49 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-
-<Pane fx:id="rootPane" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.nucodelabs.gem.view.color_palette.ColorPaletteController">
-   <children>
-        <VBox fx:id="rootVBox" fillWidth="false" spacing="5.0">
-             <VBox fillWidth="false" spacing="5.0" VBox.vgrow="NEVER">
-                 <Label alignment="CENTER" text="%paletteLabel">
-               <padding>
-                  <Insets bottom="15.0" />
-               </padding></Label>
-            <HBox spacing="1.0">
-               <children>
-                       <Pane fx:id="palettePane" />
-                  <Pane fx:id="labelsPane">
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin></Pane>
-               </children>
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-            </HBox>
-             </VBox>
-             <VBox fillWidth="false" spacing="10.0" VBox.vgrow="NEVER">
-                  <VBox fillWidth="false" spacing="5.0" VBox.vgrow="NEVER">
-                      <Label text="%paletteMinRes" />
-                      <TextField fx:id="minResistanceTF" maxWidth="100.0" onKeyTyped="#onMinResistanceEdit" />
-                  </VBox>
-                  <VBox fillWidth="false" spacing="5.0" VBox.vgrow="NEVER">
-                      <Label text="%paletteMaxRes" VBox.vgrow="NEVER" />
-                      <TextField fx:id="maxResistanceTF" maxWidth="100.0" onKeyTyped="#onMaxResistanceEdit" />
-                  </VBox>
-            <!--<VBox fillWidth="false" layoutX="10.0" layoutY="10.0" spacing="5.0">
-               <children>
-                  <Label text="%palettePrecision" />
-                  <TextField fx:id="precisionTF" maxWidth="100.0" onKeyTyped="#onPrecisionEdit" />
-               </children>
-            </VBox>-->
-             </VBox>
-         <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </padding>
+<Pane fx:id="rootPane" maxWidth="230" minHeight="0" minWidth="20"
+      prefWidth="300" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="ru.nucodelabs.gem.view.color_palette.ColorPaletteController">
+    <children>
+        <VBox maxHeight="450" maxWidth="250" prefHeight="450" prefWidth="250" spacing="5.0">
+            <VBox fillWidth="false" VBox.vgrow="NEVER">
+                <Label alignment="CENTER" contentDisplay="CENTER" text="%paletteLabel" textAlignment="CENTER">
+                    <padding>
+                        <Insets bottom="5.0"/>
+                    </padding>
+                </Label>
+                <HBox maxWidth="230" prefWidth="230" spacing="1.0">
+                    <children>
+                        <Pane fx:id="palettePane" maxHeight="250" maxWidth="150" prefHeight="210.0" prefWidth="150"/>
+                        <Pane fx:id="labelsPane" maxHeight="250" maxWidth="80" prefHeight="210.0" prefWidth="80"/>
+                    </children>
+                    <VBox.margin>
+                        <Insets/>
+                    </VBox.margin>
+                </HBox>
+            </VBox>
+            <VBox spacing="5.0" VBox.vgrow="NEVER">
+                <VBox fillWidth="false" spacing="5.0" VBox.vgrow="NEVER">
+                    <Label text="%paletteMinRes"/>
+                    <TextField fx:id="minResistanceTF" maxWidth="100.0" onKeyTyped="#onMinResistanceEdit"/>
+                </VBox>
+                <VBox fillWidth="false" spacing="5.0" VBox.vgrow="NEVER">
+                    <Label text="%paletteMaxRes" VBox.vgrow="NEVER"/>
+                    <TextField fx:id="maxResistanceTF" maxWidth="100.0" onKeyTyped="#onMaxResistanceEdit"/>
+                </VBox>
+                <VBox fillWidth="false" layoutX="10.0" layoutY="10.0" spacing="5.0">
+                    <children>
+                        <Label text="%palettePrecision"/>
+                        <TextField fx:id="precisionTF" maxWidth="100.0" onKeyTyped="#onPrecisionEdit"/>
+                    </children>
+                </VBox>
+            </VBox>
+            <padding>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+            </padding>
         </VBox>
-   </children>
+    </children>
 </Pane>
