--- a/src/main/resources/ru/nucodelabs/gem/view/color_palette/ColorPalette.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/color_palette/ColorPalette.fxml
@@ -1,45 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-
-<Pane fx:id="rootPane" maxWidth="230" minHeight="0" minWidth="20" prefWidth="300" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.nucodelabs.gem.view.color_palette.ColorPaletteController">
-    <VBox maxHeight="450" maxWidth="250" prefHeight="450" prefWidth="250" spacing="10.0">
-        <VBox fillWidth="false" VBox.vgrow="NEVER">
-            <Label alignment="CENTER" contentDisplay="CENTER" text="%paletteLabel" textAlignment="CENTER">
-                <padding>
-                    <Insets bottom="5.0" />
-                </padding>
-            <font>
-               <Font size="15.0" />
-            </font>
-            </Label>
-            <HBox maxWidth="230" prefWidth="230" spacing="1.0">
-                <VBox.margin>
-                    <Insets />
-                </VBox.margin>
-                <Pane fx:id="palettePane" maxHeight="250" maxWidth="150" prefHeight="250.0" prefWidth="150" />
-                <Pane fx:id="labelsPane" maxHeight="230" maxWidth="80" prefHeight="250.0" prefWidth="80" />
-            </HBox>
-        </VBox>
-        <VBox spacing="5.0" VBox.vgrow="NEVER">
-            <VBox fillWidth="false" spacing="5.0" VBox.vgrow="NEVER">
-                <Label text="%paletteMinRes" />
-                <TextField fx:id="minResistanceTF" maxWidth="100.0" onKeyTyped="#onMinResistanceEdit" />
-            </VBox>
-            <VBox fillWidth="false" spacing="5.0" VBox.vgrow="NEVER">
-                <Label text="%paletteMaxRes" VBox.vgrow="NEVER" />
-                <TextField fx:id="maxResistanceTF" maxWidth="100.0" onKeyTyped="#onMaxResistanceEdit" />
-            </VBox>
-            <VBox fillWidth="false" layoutX="10.0" layoutY="10.0" spacing="5.0">
-                <Label text="%palettePrecision" />
-                <TextField fx:id="precisionTF" maxWidth="100.0" onKeyTyped="#onPrecisionEdit" />
-            </VBox>
-        </VBox>
-        <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-        </padding>
+<?import javafx.scene.Scene?>
+<?import javafx.stage.Stage?>
+<VBox xmlns:fx="http://javafx.com/fxml/1" maxHeight="Infinity" maxWidth="Infinity" minHeight="100" minWidth="50"
+      spacing="10.0"
+      xmlns="http://javafx.com/javafx/11.0.2"
+      fx:controller="ru.nucodelabs.gem.view.color_palette.ColorPaletteController"
+      onContextMenuRequested="#showContextMenu">
+    <fx:define>
+        <ContextMenu fx:id="contextMenu">
+            <items>
+                <MenuItem text="Настроить палитру" onAction="#showConfigWindow"/>
+            </items>
+        </ContextMenu>
+    </fx:define>
+    <VBox>
+        <Label text="%paletteLabel"
+               styleClass="uclabel"/>
+        <HBox spacing="1.0" style="-fx-padding: 5;">
+            <Pane fx:id="palettePane"
+                  maxWidth="30"
+                  maxHeight="300"
+                  VBox.vgrow="ALWAYS"
+                  HBox.hgrow="ALWAYS"/>
+            <VBox fx:id="labelsPane" minWidth="0" maxWidth="Infinity"/>
+        </HBox>
     </VBox>
-</Pane>
+    <fx:define>
+        <Stage fx:id="configWindow" height="200" width="200" resizable="false"
+               title="Настройка палитры">
+            <scene>
+                <Scene fx:id="cfgScene">
+                    <VBox spacing="5.0" style="-fx-padding: 10;">
+                        <Label text="%paletteMinRes"/>
+                        <TextField fx:id="minResistanceTF" maxWidth="100.0" onAction="#onMinResistanceEdit"/>
+                        <Label text="%paletteMaxRes" VBox.vgrow="NEVER"/>
+                        <TextField fx:id="maxResistanceTF" maxWidth="100.0" onAction="#onMaxResistanceEdit"/>
+                        <Label text="%palettePrecision"/>
+                        <TextField fx:id="precisionTF" maxWidth="100.0" onAction="#onPrecisionEdit"/>
+                    </VBox>
+                </Scene>
+            </scene>
+        </Stage>
+    </fx:define>
+</VBox>
