--- a/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
@@ -72,13 +72,15 @@
                             </HBox>
                         </HBox>
                         <SplitPane orientation="VERTICAL" maxWidth="Infinity" maxHeight="Infinity">
-                            <SplitPane>
-                                <fx:include source="../color_palette/ColorPalette.fxml" fx:id="colorPalette" VBox.vgrow="NEVER" SplitPane.resizableWithParent="NEVER"/>
-                                <SplitPane orientation="VERTICAL" maxHeight="Infinity" maxWidth="Infinity">
+                            <HBox maxWidth="Infinity" maxHeight="Infinity" VBox.vgrow="ALWAYS">
+                                <fx:include source="../color_palette/ColorPalette.fxml" fx:id="colorPalette"
+                                            VBox.vgrow="NEVER" SplitPane.resizableWithParent="NEVER"/>
+                                <SplitPane orientation="VERTICAL" maxHeight="Infinity" maxWidth="Infinity"
+                                           HBox.hgrow="ALWAYS">
                                     <Placeholder text="%pseudoSection"/>
                                     <fx:include fx:id="crossSection" source="../cross_section/CrossSection.fxml"/>
                                 </SplitPane>
-                            </SplitPane>
+                            </HBox>
                             <VBox maxWidth="Infinity"
                                   maxHeight="Infinity"
                                   VBox.vgrow="ALWAYS">
