--- a/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
@@ -78,7 +78,7 @@
                                 <SplitPane orientation="VERTICAL" maxHeight="Infinity" maxWidth="Infinity"
                                            HBox.hgrow="ALWAYS">
                                     <Placeholder text="%pseudoSection"/>
-                                    <fx:include fx:id="crossSection" source="../cross_section/CrossSection.fxml"/>
+                                    <fx:include fx:id="crossSection" source="../charts/CrossSection.fxml"/>
                                 </SplitPane>
                             </HBox>
                             <VBox maxWidth="Infinity"
