--- a/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.Scene?>
 <?import javafx.stage.Stage?>
-<?import ru.nucodelabs.gem.view.usercontrols.placeholder.Placeholder?>
 <Stage xmlns="http://javafx.com/javafx"
        xmlns:fx="http://javafx.com/fxml"
        maxWidth="Infinity" maxHeight="Infinity"
@@ -57,29 +56,31 @@
                 </MenuBar>
                 <StackPane maxWidth="Infinity" maxHeight="Infinity">
                     <VBox maxWidth="Infinity" maxHeight="Infinity">
-                        <HBox>
-                            <fx:include fx:id="picketsBar" source="PicketsBar.fxml" HBox.hgrow="ALWAYS"/>
-                            <HBox>
-                                <Button fx:id="addPicketBtn" prefWidth="50" minWidth="50" maxWidth="50"
-                                        onAction="#addPicket" stylesheets="@PicketsBar.css"
-                                        HBox.hgrow="NEVER" contentDisplay="GRAPHIC_ONLY">
-                                    <graphic>
-                                        <ImageView fitWidth="15" fitHeight="15" preserveRatio="true">
-                                            <Image url="@../../../../../img/ui_icons/add/2x/round_add_black_24dp.png"/>
-                                        </ImageView>
-                                    </graphic>
-                                </Button>
-                            </HBox>
-                        </HBox>
                         <SplitPane orientation="VERTICAL" maxWidth="Infinity" maxHeight="Infinity">
                             <HBox maxWidth="Infinity" maxHeight="Infinity" VBox.vgrow="ALWAYS">
                                 <fx:include source="../color_palette/ColorPalette.fxml" fx:id="colorPalette"
-                                            VBox.vgrow="NEVER" SplitPane.resizableWithParent="NEVER"/>
-                                <SplitPane orientation="VERTICAL" maxHeight="Infinity" maxWidth="Infinity"
-                                           HBox.hgrow="ALWAYS">
-                                    <Placeholder text="%pseudoSection"/>
-                                    <fx:include fx:id="crossSection" source="../charts/CrossSection.fxml"/>
-                                </SplitPane>
+                                            VBox.vgrow="ALWAYS"/>
+                                <VBox HBox.hgrow="ALWAYS">
+                                    <HBox>
+                                        <fx:include fx:id="picketsBar" source="PicketsBar.fxml" HBox.hgrow="ALWAYS"/>
+                                        <HBox>
+                                            <Button fx:id="addPicketBtn" prefWidth="50" minWidth="50" maxWidth="50"
+                                                    onAction="#addPicket" stylesheets="@PicketsBar.css"
+                                                    HBox.hgrow="NEVER" contentDisplay="GRAPHIC_ONLY">
+                                                <graphic>
+                                                    <ImageView fitWidth="15" fitHeight="15" preserveRatio="true">
+                                                        <Image url="@../../../../../img/ui_icons/add/2x/round_add_black_24dp.png"/>
+                                                    </ImageView>
+                                                </graphic>
+                                            </Button>
+                                        </HBox>
+                                    </HBox>
+                                    <SplitPane orientation="VERTICAL" maxHeight="Infinity" maxWidth="Infinity"
+                                               HBox.hgrow="ALWAYS">
+                                        <fx:include source="../charts/PseudoSection.fxml"/>
+                                        <fx:include fx:id="crossSection" source="../charts/CrossSection.fxml"/>
+                                    </SplitPane>
+                                </VBox>
                             </HBox>
                             <VBox maxWidth="Infinity"
                                   maxHeight="Infinity"
