--- a/src/main/resources/ru/nucodelabs/gem/view/usercontrols/heatmap/HeatMap.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/usercontrols/heatmap/HeatMap.fxml
@@ -2,8 +2,8 @@
 
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.layout.VBox?>
-<VBox xmlns:fx="http://javafx.com/fxml"
-      xmlns="http://javafx.com/javafx"
-      fx:id="container" fx:controller="ru.nucodelabs.gem.view.usercontrols.heatmap.HeatMap">
+<fx:root xmlns:fx="http://javafx.com/fxml" type="javafx.scene.layout.VBox"
+         xmlns="http://javafx.com/javafx"
+         fx:id="container">
     <Canvas fx:id="canvas" width="${container.width}" height="${container.height}"/>
-</VBox>
+</fx:root>
